add picture in /content; edit AboutUs file to show background picture

--- a/Blog/Views/AboutUs/Contacts.cshtml
+++ b/Blog/Views/AboutUs/Contacts.cshtml
@@ -4,6 +4,8 @@
 @{
     ViewBag.Title = "Contacts";
 }
+<body background="~/Content/BackGroundHummer.jpg">
+</body>
 <h2>Contact with us</h2>
 <p>Тел: +359 888 696969</p>
 <p>E-mail: share friends@gmail.com</p>
