--- a/Blog/Views/AboutUs/Index.cshtml
+++ b/Blog/Views/AboutUs/Index.cshtml
@@ -4,8 +4,10 @@
 @{
     ViewBag.Title = "About Us";
 }
-<body background="backrount !!! to do !!!jpg">
+
+<body background="~/Content/BackGroundHummer.jpg">
 </body>
+
 <section class="row">
     <article class="post col-md-3">
         <h2>За нас </h2>
