add button ListUserArticle

--- a/Blog/Views/AboutUs/Index.cshtml
+++ b/Blog/Views/AboutUs/Index.cshtml
@@ -10,11 +10,11 @@
 
 <section class="row">
     <article class="post col-md-3">
-        <h2>За нас </h2>
+        <h2>About Us </h2>
 
         <div>
             <p>
-                <b>Share Your Friends</b> 
+                <b>Share Your Friends: </b> 
                 We are super mega hyper people that share our friends!
             </p>
             <h4>Topcho team </h4>
