--- a/Blog/Views/Manage/Index.cshtml
+++ b/Blog/Views/Manage/Index.cshtml
@@ -3,9 +3,11 @@
     ViewBag.Title = "Manage";
 }
 <div class="container">
-    <div class="well">
-        <h2>@ViewBag.Title.</h2>
 
+   
+    <div class="well">
+        <h2>@ViewBag.Title your profile.</h2>
+        @Html.ActionLink("View Your Posts", "ListUserArticle", "Article")
         <p class="text-success">@ViewBag.StatusMessage</p>
         <div>
             <h4>Change your account settings</h4>
