Added Gallery and profile picture

--- a/Blog/Views/Article/Details.cshtml
+++ b/Blog/Views/Article/Details.cshtml
@@ -14,60 +14,24 @@
         <p>
             @Model.Content
         </p>
-        <div class="pull-left">
-            @foreach (var tag in Model.Tags)
-            {
-                @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
-            }
-        </div>
-        <small class="author pull-right">
-            --author @Model.Author.FullName
-        </small><br />
+       <div class="pull-left">
+                            @foreach (var tag in Model.Tags)
+                            {
+                                @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
+                            }
+                        </div>
+                        <small class="author pull-right">
+                            --author @Model.Author.FullName
+                        </small><br/>
         <footer class="pull-right">
             @if (User.IsInRole("Admin") || Model.IsAuthor(User.Identity.Name))
             {
-                @Html.ActionLink("Edit", "Edit", "Article", new { @id = Model.Id }, new { @class = "btn btn-success btn-xs" })
-                @Html.ActionLink("Delete", "Delete", "Article", new { @id = Model.Id }, new { @class = "btn btn-danger btn-xs" })
+            @Html.ActionLink("Edit", "Edit", "Article", new { @id = Model.Id }, new { @class = "btn btn-success btn-xs" })
+            @Html.ActionLink("Delete", "Delete", "Article", new { @id = Model.Id }, new { @class = "btn btn-danger btn-xs" })
             }
+
             @Html.ActionLink("Back", "Index", "Article", null, new { @class = "btn btn-default btn-xs" })
         </footer>
-    </article><br/>
-    <h1 class="text-center">Comments</h1>
-    @if (Request.IsAuthenticated)
-    {
-        using (Html.BeginForm("Create", "Comment", FormMethod.Post, new { @class = "form-horizontal" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="col-sm-10 center-block">
-                    @Html.TextArea("Content", "", new { @class = "form-control", @rows = "5"})
-                </div>
-            </div><br />
-            <div class="form-group" method="">
-                <div class="col-sm-4 col-sm-offset-4 pull-left">
-                    <input type="text" name="ArticleId" style="display:none" value="@Model.Id" />
-                    <input type="submit" value="Post Comment" class="btn btn-success" />
-                </div>
-            </div>
-        }
-    }
-    @foreach (var comment in Model.Comments)
-    {
-                <p>
-                    @comment.Content
-                </p>
-                <small class="author pull-left">
-                    --author @comment.Author.FullName
-                </small>
-                <br/>
-        if (User.IsInRole("Admin") || comment.IsAuthor(User.Identity.Name))
-        {
-            @Html.ActionLink("Edit", "Edit", "Comment", new { @id = comment.Id }, new { @class = "btn btn-success btn-xs" })
-            @Html.ActionLink("Delete", "Delete", "Comment", new { @id = comment.Id }, new { @class = "btn btn-danger btn-xs" })
-        }
-        <br/>
-        <br/>
-    }
-</div><br/>
+    </article>
+</div>
 <hr />
