--- a/Blog/Views/Account/Login.cshtml
+++ b/Blog/Views/Account/Login.cshtml
@@ -12,7 +12,7 @@
                     @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                         @Html.AntiForgeryToken()
-                        
+                        <h4>Use a local account to log in.</h4>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                         <div class="form-group">
@@ -52,7 +52,11 @@
                     }
                 </section>
             </div>
-           
+            <div class="col-md-4">
+                <section id="socialLoginForm">
+                    @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
+                </section>
+            </div>
         </div>
     </div>
 </div>
