--- a/Blog/Views/Shared/_LoginPartial.cshtml
+++ b/Blog/Views/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
         @if (User.IsInRole("Admin") || User.IsInRole("Moderator"))
         {
             <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Setings<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                     <li>@Html.ActionLink("Categories", "List", "Category")</li>
                     @if (User.IsInRole("Admin"))
