--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/jquery.bxslider.css" rel="stylesheet" />
+    <link href="~/Content/myStyle.css" rel="stylesheet" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
@@ -21,8 +22,6 @@
                     <span class="icon-bar"></span>
                 </button>
                 @Html.ActionLink("SHARE YOUR FRIENDS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("About Us", "Index", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
-                @Html.ActionLink("Contacts", "Contacts", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
                 @if (Request.IsAuthenticated)
                 {
                 @Html.ActionLink("Gallery", "Index", "Slider", new { area = "" }, new { @class = "navbar-brand" })
@@ -35,12 +34,23 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <footer class="pull-right">
-            <p>&copy; @DateTime.Now.Year - Topcho Crew</p>
-        </footer>
     </div>
+    @if (!Request.IsAuthenticated)
+    {
+        <img src="~/Content/images/HomePic/shareLogo.png" class="myImage" />
+        <marquee direction="up" SCROLLAMOUNT=2>
+            <p class="myFrontPageText">If you have a friend with programming skills </p>
+            <p class="myFrontPageText">This is the right place to share it</p>
+        </marquee>
+    }
 
-    
+    <div class="navbar navbar-default navbar-fixed-bottom">
+        @Html.ActionLink("About Us", "Index", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
+        @Html.ActionLink("Contacts", "Contacts", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
+        <div class="myCopyRight pull-right">
+            &copy; @DateTime.Now.Year - Topcho Crew
+        </div>
+    </div>
     @RenderSection("scripts", required: false)
 </body>
 </html>
