--- a/Blog/Views/Home/ListCategories.cshtml
+++ b/Blog/Views/Home/ListCategories.cshtml
@@ -23,3 +23,11 @@
 </div>
 <hr />
 }
+else
+{
+    <img src="~/Content/images/HomePic/shareLogo.png" class="myImage" />
+    <marquee direction="up" SCROLLAMOUNT=2>
+        <p class="myFrontPageText">If you have a friend with programming skills </p>
+        <p class="myFrontPageText">This is the right place to share it</p>
+    </marquee>
+}
