change inside in aboutus and contact us

--- a/Blog/Views/AboutUs/Index.cshtml
+++ b/Blog/Views/AboutUs/Index.cshtml
@@ -8,19 +8,27 @@
 <body background="~/Content/BackGroundHummer.jpg">
 </body>
 
-<section class="row">
-    <article class="post col-md-3">
-        <h2>About Us </h2>
+<div class="container post col-md-6">
+    <div class="well">
+        <section class="row">
+            <article class="post col-md-12">
+               <h2>About Us </h2>
+                <div>
+                    <p>
+                        <b>Share Your Friends: </b>
+                        We are a small team who decided to create a platform for sharing friends. Everyone needs a certain service which does not have the knowledge. Thanks to the "Share Your Friends" you can look at the services offered by your friends or friends of your friends. Recommended people to avoid disgruntled customer
+                    </p>
+                    <h4>Topcho team </h4>
+                    <div>Association with non-commercial purpose, it wants to help the end user need of a particular service. Whether you need a website, a new little program to facilitate your life or other service from the IT business can look for the right person.</div>
+                </div>
+                </p>
+                <h4>Who is Topcho</h4>
+                <div>
+                    Topcho is a cute little furry dog. The breed is unknown, it has only three legs, one eye does not see. In the past, the incident occurred and some reason an ear is cut. If you are wondering why it says "Topcho" because "Lucky" is not appropriate.
+                </div>
 
-        <div>
-            <p>
-                <b>Share Your Friends: </b> 
-                We are super mega hyper people that share our friends!
-            </p>
-            <h4>Topcho team </h4>
-            <div>4th beautiful people and one fat dog</div>
+            </article>
+        </section>
         </div>
-    </article>
-</section>
-
+    </div>
 
