edit view for programmer name and programmer city

--- a/Blog/Views/Article/Create.cshtml
+++ b/Blog/Views/Article/Create.cshtml
@@ -5,16 +5,16 @@
 
 <div class="container">
     <div class="well">
-        <h2>Create Article</h2>
+        <h2>Share your Friend</h2>
         @using (Html.BeginForm("Create", "Article", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             @Html.AntiForgeryToken()
             @Html.ValidationSummary("", new { @class = "text-danger" })
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Title, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.Friends_Name, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Friends_Name, new { @class = "form-control" })
                 </div>
             </div>
             <div class="form-group">
@@ -24,17 +24,17 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.CategoryId, new { @class = "col-sm-4 control-label" })
+                @Html.LabelFor(m => m.City, new { @class = "col-sm-4 control-label" })
                 <div class="dropdown col-sm-4">
-                    @Html.DropDownListFor(m => m.CategoryId,
+                    @Html.DropDownListFor(m => m.City,
                         new SelectList(Model.Categories, "Id", "Name"),
                         new { @class = "btn btn-info col-sm-12" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Tags, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.ProgrammingLanguage, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Tags, new { @class = "form-control col-sm-4" })
+                    @Html.TextBoxFor(m => m.ProgrammingLanguage, new { @class = "form-control col-sm-4" })
                 </div>
             </div>
 
