--- a/Blog/Views/Category/Delete.cshtml
+++ b/Blog/Views/Category/Delete.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Delete Category</h2>
+        <h2>Delete Cities</h2>
         @using (Html.BeginForm("Delete", "Category", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             <div class="form-group">
