--- a/Blog/Views/Article/Delete.cshtml
+++ b/Blog/Views/Article/Delete.cshtml
@@ -1,5 +1,5 @@
 ﻿@model Blog.Models.Article
-    ViewBag.Title = "Delete";
+    ViewBag.Friends_Name = "Delete";
 }
 
 <div class="container">
@@ -10,9 +10,9 @@
             @Html.AntiForgeryToken()
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Title, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.Friends_Name, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Title, new { @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBoxFor(m => m.Friends_Name, new { @class = "form-control", @readonly = "readonly" })
                 </div>
             </div>
             <div class="form-group">
@@ -28,7 +28,7 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Tags, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.ProgrammingLanguage, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
                     @Html.TextBox("tagsString", (object)ViewBag.TagsString, new { @class = "form-control", @readonly = "readonly" })
                 </div>
