--- a/Blog/Views/Article/Details.cshtml
+++ b/Blog/Views/Article/Details.cshtml
@@ -1,28 +1,28 @@
 ﻿@model Blog.Models.Article
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Friends_Name = "Details";
 }
 
 <div class="container">
     <article>
         <header>
             <h2>
-                @Model.Title
+                @Model.Friends_Name
             </h2>
         </header>
         <p>
             @Model.Content
         </p>
        <div class="pull-left">
-                            @foreach (var tag in Model.Tags)
+                            @foreach (var tag in Model.ProgrammingLanguage)
                             {
                                 @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
                             }
                         </div>
-                        <small class="author pull-right">
+                       <!-- <small class="author pull-right">
                             --author @Model.Author.FullName
-                        </small><br/>
+                        </small><br/>-->
         <footer class="pull-right">
             @if (User.IsInRole("Admin") || Model.IsAuthor(User.Identity.Name) || User.IsInRole("Moderator") || User.IsInRole("Editor"))
             {
