--- a/Blog/Views/Article/Edit.cshtml
+++ b/Blog/Views/Article/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Blog.Models.ArticleViewModel
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Friends_Name = "Edit";
 }
 
 <div class="container">
@@ -16,9 +16,9 @@
             @Html.HiddenFor(m => m.AuthorId)
 
             <div class="form-group">
-                @Html.LabelFor(m => m.Title, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.Friends_Name, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Title, new { @class = "form-control" })
+                    @Html.TextBoxFor(m => m.Friends_Name, new { @class = "form-control" })
                 </div>
             </div>
 
@@ -29,17 +29,17 @@
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.CategoryId, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.City, new { @class = "control-label col-sm-4" })
                 <div class="dropdown col-sm-4">
-                    @Html.DropDownListFor(m => m.CategoryId,
-                        new SelectList(Model.Categories, "Id", "Name", Model.CategoryId),
+                    @Html.DropDownListFor(m => m.City,
+                        new SelectList(Model.Categories, "Id", "Name", Model.City),
                         new { @class = "btn btn-info col-sm-12" })
                 </div>
             </div>
             <div class="form-group">
-                @Html.LabelFor(m => m.Tags, new { @class = "control-label col-sm-4" })
+                @Html.LabelFor(m => m.ProgrammingLanguage, new { @class = "control-label col-sm-4" })
                 <div class="col-sm-4">
-                    @Html.TextBoxFor(m => m.Tags, new { @class = "form-control col-sm-4" })
+                    @Html.TextBoxFor(m => m.ProgrammingLanguage, new { @class = "form-control col-sm-4" })
                 </div>
             </div>
 
