--- a/Blog/Views/Category/Create.cshtml
+++ b/Blog/Views/Category/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Create Category</h2>
+        <h2>Create Cities</h2>
         @using (@Html.BeginForm("Create", "Category", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             <div class="form-group span=8 offset=2">
