--- a/Blog/Views/Category/Edit.cshtml
+++ b/Blog/Views/Category/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>Edit Category</h2>
+        <h2>Edit Cities</h2>
         @using (Html.BeginForm("Edit", "Category", FormMethod.Post, new { @class = "form-horizontal" }))
         {
             <div class="form-group">
