--- a/Blog/Views/Category/List.cshtml
+++ b/Blog/Views/Category/List.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="well">
-        <h2>All Categories - @Html.ActionLink("Create", "Create", "Category", null, new { @class = "btn btn-warning" })</h2>
+        <h2>All Cities - @Html.ActionLink("Create", "Create", "Category", null, new { @class = "btn btn-warning" })</h2>
         <div class="row">
             <table class="table table-striped table-hover col-sm-12">
                 <thead>
