--- a/Blog/Views/Shared/_LoginPartial.cshtml
+++ b/Blog/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
             <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Settings<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                    <li>@Html.ActionLink("Categories", "List", "Category")</li>
+                    <li>@Html.ActionLink("Edit Cities", "List", "Category")</li><!--edit by nasko-->
                     @if (User.IsInRole("Admin"))
                     {
                     <li>@Html.ActionLink("Users", "List", "User")</li>
