--- a/Blog/Views/Slider/Index.cshtml
+++ b/Blog/Views/Slider/Index.cshtml
@@ -7,8 +7,8 @@
 }
 
 
-<h2 class="text-center">Welcome to our Gallery</h2>
-<p class="text-center">
+<h2 class="myTextInGallery">Welcome to our Funny Pictures Gallery</h2>
+<p class="myTTT">
 
     @Html.ActionLink("Add Image", "AddImage", "Slider", new { id = "linkAddImage" }, new { @class = "btn btn-info" })
 
