--- a/Blog/Views/Article/Details.cshtml
+++ b/Blog/Views/Article/Details.cshtml
@@ -1,4 +1,5 @@
 ﻿@model Blog.Models.Article
+@using Microsoft.AspNet.Identity
 
 @{
     ViewBag.Friends_Name = "Details";
@@ -33,36 +34,25 @@
             @Html.ActionLink("Back", "Index", "Article", null, new { @class = "btn btn-default btn-xs" })
         </footer>
     </article><br />
-    <h1 class="text-center">Comments</h1>
-    @if (Request.IsAuthenticated)
-    {
-        using (Html.BeginForm("Create", "Comment", FormMethod.Post, new { @class = "form-horizontal" }))
-        {
-            @Html.AntiForgeryToken()
-            @Html.ValidationSummary("", new { @class = "text-danger" })
-            <div class="form-group">
-                <div class="col-sm-10 center-block">
-                    @Html.TextArea("Content", "", new { @class = "form-control", @rows = "5" })
-                </div>
-            </div>
-            <br />
-                <div class="form-group" method="">
-                    <div class="col-sm-4 col-sm-offset-4 pull-left">
-                        <input type="text" name="ArticleId" style="display:none" value="@Model.Id" />
-                        <input type="submit" value="Post Comment" class="btn btn-success" />
-                    </div>
-                </div>
-        }
-    }
+   <hr />
+    <p class="myComments">Comments:</p>
     @foreach (var comment in Model.Comments)
     {
         <p>
             @comment.Content
         </p>
         <small class="author pull-left">
+            
             --author @comment.Author.FullName
+                @{
+                    var imgUrl = Url.Content("~/Content/images/profile/" + User.Identity.GetUserName() + ".png") + "?time=" + DateTime.Now.ToString();
+                }
+                <img src="@imgUrl" height="50" width="45" />
+            
         </small>
-                    <br />
+        <br />
+        <br />
+        <br />
         if (User.IsInRole("Admin") || comment.IsAuthor(User.Identity.Name) || User.IsInRole("Moderator") || User.IsInRole("Editor"))
         {
             @Html.ActionLink("Edit", "Edit", "Comment", new { @id = comment.Id }, new { @class = "btn btn-success btn-xs" })
@@ -72,4 +62,25 @@
         <br />
     }
 </div><br />
+
+@if (Request.IsAuthenticated)
+{
+    using (Html.BeginForm("Create", "Comment", FormMethod.Post, new { @class = "form-horizontal" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary("", new { @class = "text-danger" })
+        <div class="form-group">
+            <div class="col-sm-10 center-block">
+                @Html.TextArea("Content", "", new { @class = "form-control", @rows = "5" })
+            </div>
+        </div>
+            <br />
+            <div class="form-group" method="">
+                <div class="col-sm-4 col-sm-offset-0 pull-left">
+                    <input type="text" name="ArticleId" style="display:none" value="@Model.Id" />
+                    <input type="submit" value="Post Comment" class="btn btn-success" />
+                </div>
+            </div>
+    }
+}
 <hr />
