Changed name of the Gallery to 15 Facts and added new folder Facts in Content folder with 15 pics

--- a/Blog/Content/myStyle.css
+++ b/Blog/Content/myStyle.css
@@ -95,3 +95,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff00', end
 .myPostCpmmentB{
     text-align:left;
 }
+
+.myimgG{
+    height:0,auto;
+    width:0,auto;
+    margin:auto;
+}
