--- a/Blog/Views/Shared/SliderPartial.cshtml
+++ b/Blog/Views/Shared/SliderPartial.cshtml
@@ -2,7 +2,7 @@
     <ul id="slider">
         @foreach (var image in Model)
         {
-            <li><img src="@Url.Content(image.ImagePath)"/></li>
+            <li class="myimgG"><img src="@Url.Content(image.ImagePath)"/></li>
         }
     </ul>
 </div>
