--- a/Blog/Views/Slider/Index.cshtml
+++ b/Blog/Views/Slider/Index.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<h2 class="myTextInGallery">Welcome to our Funny Pictures Gallery</h2>
+<h2 class="myTextInGallery">15 Facts That Only Programmers Know And Most People Don’t</h2>
 <p class="myTTT">
 
     @Html.ActionLink("Add Image", "AddImage", "Slider", new { id = "linkAddImage" }, new { @class = "btn btn-info" })
