--- a/Blog/Views/Tag/List.cshtml
+++ b/Blog/Views/Tag/List.cshtml
@@ -1,5 +1,4 @@
 ﻿@model List<Blog.Models.Article>
-
 @{
     ViewBag.Title = "List";
 }
@@ -12,7 +11,7 @@
                 <article>
                     <header>
                         <h2>
-                            @Html.ActionLink(@article.Title, "Details", "Article", new { @id = article.Id }, null)
+                            @Html.ActionLink(@article.Friends_Name, "Details", "Article", new { @id = article.Id }, null)
                         </h2>
                     </header>
                     <p>
@@ -20,7 +19,7 @@
                     </p>
                     <footer>
                         <div class="pull-left">
-                            @foreach (var tag in article.Tags)
+                            @foreach (var tag in article.ProgrammingLanguage)
                             {
                                 @Html.ActionLink(tag.Name, "List", "Tag", new { @id = tag.Id }, new { @class = "btn btn-default btn-xs" })
                             }
