--- a/Blog/Content/myStyle.css
+++ b/Blog/Content/myStyle.css
@@ -101,3 +101,265 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff00', end
     width:0,auto;
     margin:auto;
 }
+
+
+/*ANIMATION CODE START*/
+
+.{margin:0;padding:0;}
+
+#myClouds{
+    padding:150px 0;
+    background:#c9dbe9;
+
+    background: -webkit-linear-gradient(top,#c9dbe9 0% #fff 100%);
+    background: -moz-linear-gradient(top,#c9dbe9 0% #fff 100$);
+}
+
+.myCloud{
+    width:200px;
+    height:60px;
+    background:#fff;
+
+    border-radius:200px;
+    -moz-border-radius:200px;
+    -webkit-border-radius:200px;
+
+    position:relative;
+}
+
+.myCloud:before, .myCloud:after{
+    content:"";
+    position:absolute;
+    background:#fff;
+    width:100px;
+    height:80px;
+    border: 1px solid white;
+    position:absolute;
+    top:-15px;
+    left:10px;
+
+    border-radius:100px;
+    -moz-border-radius:100px;
+    -webkit-border-radius:100px;
+
+    -webkit-transform:rotate(30deg);
+    transform:rotate(30deg);
+    -moz-transform:rotate(30deg);
+}
+
+.myCloud:after{
+    width:120px;
+    height:120px;
+    top:-55px;
+    left:auto;
+    right:15px;
+
+}
+
+.x1{
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x2{
+    left:200px;
+
+    -webkit-transform:scale(0.6);
+    -moz-transform:scale(0.6);
+    transform:scale(0.6);
+    opacity:0.6;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x3{
+    left:-250px;
+    top:-230px;
+
+    -webkit-transform:scale(0.8);
+    -moz-transform:scale(0.8);
+    transform:scale(0.8);
+    opacity:0.8;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x4{
+    left:470px;
+    top:-200px;
+
+    -webkit-transform:scale(0.75);
+    -moz-transform:scale(0.75);
+    transform:scale(0.75);
+    opacity:0.75;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x5{
+    left:-150px;
+    top:-150px;
+
+    -webkit-transform:scale(0.6);
+    -moz-transform:scale(0.6);
+    transform:scale(0.6);
+    opacity:0.6;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x6{
+    left:330px;
+    top:-300px;
+
+    -webkit-transform:scale(0.5);
+    -moz-transform:scale(0.5);
+    transform:scale(0.5);
+    opacity:0.5;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x7{
+    left:-250px;
+    top:-350px;
+
+    -webkit-transform:scale(0.65);
+    -moz-transform:scale(0.65);
+    transform:scale(0.65);
+    opacity:0.65;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x8{
+    left:410px;
+    top:-800px;
+
+    -webkit-transform:scale(0.55);
+    -moz-transform:scale(0.55);
+    transform:scale(0.55);
+    opacity:0.55;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x9{
+    left:-100px;
+    top:-500px;
+
+    -webkit-transform:scale(0.9);
+    -moz-transform:scale(0.9);
+    transform:scale(0.9);
+    opacity:0.9;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x10{
+    left:520px;
+    top:-380px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x11{
+    left:470px;
+    top:-700px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x12{
+    left:-420px;
+    top:-670px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x13{
+   left:-250px;
+    top:-640px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x14{
+    left:470px;
+    top:-610px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+.x15{
+    left:-150px;
+    top:-580px;
+
+    -webkit-transform:scale(0.85);
+    -moz-transform:scale(0.85);
+    transform:scale(0.85);
+    opacity:0.85;
+
+    -webkit-animation:moveclouds 15s linear infinite;
+    -moz-animation:moveclouds 15s linear infinite;
+    -o-animation:moveclouds 15s linear infinite;
+}
+
+@-webkit-keyframes moveclouds{
+    0% {margin-left:1000px;}
+    100% {margin-left:-1000px;}
+}
+
+/*ANIMATION CODE END*/
