--- a/Blog/Views/Home/ListCategories.cshtml
+++ b/Blog/Views/Home/ListCategories.cshtml
@@ -22,6 +22,23 @@
     </div>
 </div>
 <hr />
+<div id="myClouds">
+    <div class="myCloud x1"></div>
+    <div class="myCloud x2"></div>
+    <div class="myCloud x3"></div>
+    <div class="myCloud x4"></div>
+    <div class="myCloud x5"></div>
+    <div class="myCloud x6"></div>
+    <div class="myCloud x7"></div>
+    <div class="myCloud x8"></div>
+    <div class="myCloud x5"></div>
+    <div class="myCloud x10"></div>
+    <div class="myCloud x11"></div>
+    <div class="myCloud x12"></div>
+    <div class="myCloud x13"></div>
+    <div class="myCloud x14"></div>
+    <div class="myCloud x15"></div>
+</div>
 }
 else
 {
