add counter for visitor

--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -39,7 +39,24 @@
     <div class="navbar navbar-default navbar-fixed-bottom myNavbarStyle">
         @Html.ActionLink("About Us", "Index", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
         @Html.ActionLink("Contacts", "Contacts", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
+        
         <div class="myCopyRight pull-right">
+            <!--add by nasko-->
+            <!-- hitwebcounter Code START -->
+            <em>Unique visitor                                       </em>
+
+            <a href="http://www.hitwebcounter.com" target="_blank">
+                <img src="http://hitwebcounter.com/counter/counter.php?page=6559752&style=0035&nbdigits=4&type=page&initCount=0" title="Free track counters" Alt="Free track counters" border="0">
+            </a>                                        <br />
+            <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="Lovely Counter"
+                                         target="_blank" style="font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 10px; color: #000000; text-decoration: none ;">
+
+            </a>
+
+            <!--edn add by nasko-->
+
+
             &copy; @DateTime.Now.Year - Topcho Crew
         </div>
     </div>
