add counter with correct name

--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -41,9 +41,9 @@
         @Html.ActionLink("Contacts", "Contacts", "AboutUs", new { area = "" }, new { @class = "navbar-brand" })
         
         <div class="myCopyRight pull-right">
-            <!--add by nasko-->
+            <!--add by nasko read from web site :хттп://ввв.hitwebcounter.com/webcounter.php  -->
             <!-- hitwebcounter Code START -->
-            <em>Unique visitor                                       </em>
+            <em>Number of visitor:                                       </em>
 
             <a href="http://www.hitwebcounter.com" target="_blank">
                 <img src="http://hitwebcounter.com/counter/counter.php?page=6559752&style=0035&nbdigits=4&type=page&initCount=0" title="Free track counters" Alt="Free track counters" border="0">
