--- a/Blog/Views/Manage/Index.cshtml
+++ b/Blog/Views/Manage/Index.cshtml
@@ -34,11 +34,11 @@
                 </dd>
                 <dt>My Posts:</dt>
                 <dd>
-                    @Html.ActionLink("View", "ListUserArticle", "Article", new { @class = "btn btn-success btn-sm" })
+                    @Html.ActionLink("View", "ListUserArticle", "Article", null, new { @class = "btn btn-success btn-sm" })
                 </dd>
                 <dt>My Comments:</dt>
                 <dd>
-                    @Html.ActionLink("View", "ListUserComments", "Comment", new { @class = "btn btn-info btn-sm" })
+                    @Html.ActionLink("View", "ListUserComments", "Comment", null, new { @class = "btn btn-info btn-sm" })
                 </dd>
                 
                 <dt>Password:</dt>
