edit counter to count only unique visitor

--- a/Blog/Views/Shared/_Layout.cshtml
+++ b/Blog/Views/Shared/_Layout.cshtml
@@ -42,7 +42,8 @@
         
         <div class="myCopyRight pull-right">
             <!--add by nasko read from web site :хттп://ввв.hitwebcounter.com/webcounter.php  -->
-            <!-- hitwebcounter Code START -->
+           
+             @*<!-- hitwebcounter Code START --> count every clic on all web 
             <em>Number of visitor:                                       </em>
 
             <a href="http://www.hitwebcounter.com" target="_blank">
@@ -54,7 +55,19 @@
 
             </a>
 
-            <!--edn add by nasko-->
+            <!--edn add by nasko-->*@
+
+            <!-- hitwebcounter Code START -->
+            <em>Measure Website Visitors                                        </em>
+            <a href="http://www.hitwebcounter.com" target="_blank">
+                <img src="http://hitwebcounter.com/counter/counter.php?page=6559845&style=0035&nbdigits=5&type=ip&initCount=0" title="web page hit counters codes Free" Alt="web page hit counters codes Free" border="0">
+            </a>                                        <br />
+            <!-- hitwebcounter.com --><a href="http://www.hitwebcounter.com" title="Measure Website Visitors"
+                                         target="_blank" style="font-family: Arial, Helvetica, sans-serif;
+                                        font-size: 11px; color: #000000; text-decoration: none ;">
+                
+            </a>
+
 
 
             &copy; @DateTime.Now.Year - Topcho Crew
