--- a/Blog/Content/myStyle.css
+++ b/Blog/Content/myStyle.css
@@ -107,13 +107,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff00', end
 
 .{margin:0;padding:0;}
 
-#myClouds{
+/*#myClouds{
     padding:150px 0;
     background:#c9dbe9;
 
     background: -webkit-linear-gradient(top,#c9dbe9 0% #fff 100%);
     background: -moz-linear-gradient(top,#c9dbe9 0% #fff 100$);
-}
+}*/
 
 .myCloud{
     width:200px;
@@ -370,4 +370,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffff00', end
     font-family: 'Freestyle Script';
     color:black;
 
+}
+/*#myList{
+   font-size: 100px;
+   color:#FF0000;
+}*/
+
+
+body{
+    background:rgba(5,193,255,1);
 }
